# diploma-master

./: .gitignore  Dockerfile  Makefile  README.md  main.aux  main.bbl  main.dvi  main.out  main.tex  main.toc
.devcontainer/: Dockerfile  devcontainer.json
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/: CMakeLists.txt  setup.py
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/install/radar_bgt60tr13c_driver/lib/radar_bgt60tr13c_driver/: radar_publisher_node
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/install/radar_bgt60tr13c_driver/share/radar_bgt60tr13c_driver/: package.bash  package.dsv  package.sh  package.zsh
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/install/radar_bgt60tr13c_driver/share/radar_bgt60tr13c_driver/launch/: radar_visualizer.launch.py
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/launch/: radar_visualizer.launch.py
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/log/: latest_build
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/c/BGT24ATR22/raw_data/: frame_configuration.h  raw_data.c
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/c/BGT60ATR24C/raw_data/: CMakeLists.txt
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/c/BGT60LTR11AIP/advanced_motion_sensing/: advanced_motion_sensing.c
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/c/BGT60LTR11AIP/raw_data/: raw_data.c
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/c/BGT60TR13C/range_doppler_map/: range_doppler_map.c
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/c/BGT60UTR11AIP/raw_data/: CMakeLists.txt
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/matlab/BGT24ATR22/bfsk_distance/: BGT24ATR22_settings_bfsk_demo.json  bfsk_distance.m
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/matlab/BGT24ATR22/continuous_wave/: BGT24ATR22_continuous_wave.json  configure_cw.m
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/matlab/BGT24ATR22/distance_angle/: BGT24ATR22_settings_distance_angle_demo.json  distance_angle.m
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/matlab/BGT24ATR22/dynamic_presence/: ATR22_dyn_presence_demo.m  BGT24ATR22_settings_dynpres_demo.json
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/matlab/BGT24ATR22/micro_motion/: BGT24ATR22_settings_micro_motion.json  micro_motion.m
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/radar_sdk/examples/py/: requirements.txt
Materials/ROS2/ros2_ws/src/radar_bgt60tr13c_driver/src/: radar_node.cpp
Src/: config.tex  (+4 more)
(+204 files in other folders)
